objects/CaseSAPRouting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <label>DIV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <label>PG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_SAP_System__c</fullName>
        <label>Target SAP System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case SAP Routing</label>
    <listViews>
        <fullName>UK_List</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SETUP_TYPE</columns>
        <columns>BU__c</columns>
        <columns>Country__c</columns>
        <columns>DIV__c</columns>
        <columns>PG__c</columns>
        <columns>Target_SAP_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>UK List</label>
        <language>en_US</language>
    </listViews>
</CustomObject>